# GPR-300

./: CMakeLists.txt  Folder.DotSettings
assignments/assignment0/: main.cpp
assignments/assignment1/: CMakeLists.txt  main.cpp
assignments/assignment1/assets/: post.frag  post.vert
assignments/assignment2/: CMakeLists.txt  main.cpp
assignments/assignment3/: CMakeLists.txt  main.cpp  shadow.cpp
assignments/assignment3/assets/: gPass.frag  lightOrb.vert  lit.frag  litPass.frag
assignments/assignment3/assignment3/: shadow.h
assignments/assignment3/assignment3/assets/: depth.vert  gPass.frag  litPass.frag  litPass.vert
assignments/final/: CMakeLists.txt  CrosshatchingShader.cpp  CrosshatchingShader.h  Framebuffer.cpp  Framebuffer.h  NoiseShader.cpp  NoiseShader.h  OutlineShader.cpp  OutlineShader.h  main.cpp
assignments/final/assets/: depth.vert  final.frag  lit.frag  lit.vert  quick.mtl  shadow.frag  shadow.vert
assignments/final/assets/crosshatching/: crosshatching.frag  crosshatching.vert
assignments/final/assets/outline/: outline.frag  outline.vert
assignments/work_session0/: CMakeLists.txt  main.cpp
assignments/work_session0/assets/: debug.frag  lit.frag  lit.vert  shadow.vert  water.frag  water.vert
assignments/work_session1/: CMakeLists.txt  main.cpp
assignments/work_session1/assets/: pbr.frag  post.frag
assignments/work_session2/: CMakeLists.txt  main.cpp
assignments/work_session2/assets/: debug.vert  island.frag  shadow.frag  water.vert
assignments/work_session3/: CMakeLists.txt  main.cpp
assignments/work_session3/assets/: depth.frag  island.vert  pbr_toon.frag  pbr_toon.vert  transition.frag  transition.vert
core/ew/: model.cpp  model.h  shader.cpp  shader.h
